--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simple web page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>aside section</h1>
+    <h2>10x academy</h2>
     <p>I am working on aside section</p>
     <aside>
         <ol>
